// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`requestInvoke should attempt collection invocation, handler attempting to return a DOMException-like object, with name, message and multiline line stack 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler attempting to return a browser-like ErrorEvent-like object, with name, message and multiline line stack 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler attempting to return an error-like object, with message 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": {
    "message": "Handler error",
  },
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler attempting to return an error-like object, with name and multiline line stack 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler attempting to return an error-like object, with name and single line stack 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler attempting to return an error-like object, with single line stack 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": {
    "message": "Handler error",
    "stack": "Stack trace",
  },
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler returning AggregateError 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler returning error 1`] = `
{
  "error": "Internal error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler returning null 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": null,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler returning promise 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": {
    "data": "async-result",
  },
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler returning undefined 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": undefined,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, handler throwing error 1`] = `
{
  "error": "Handler error",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, mismatched state and request collection IDs 1`] = `
{
  "error": "Unknown collectionId",
  "id": "request-id",
  "ok": false,
  "t": "invoke:result",
}
`;

exports[`requestInvoke should attempt collection invocation, successful handler 1`] = `
{
  "id": "request-id",
  "ok": true,
  "result": {
    "data": "result",
  },
  "t": "invoke:result",
}
`;

exports[`requestInvoke should timeout when handler takes too long 1`] = `
[
  [
    {
      "error": {
        "message": "Invoke timeout",
      },
      "id": "request-id",
      "ok": false,
      "t": "invoke:result",
    },
  ],
]
`;
